package bigtalkdesignMod.v02.v2_5;

public abstract class CashSuper {
    public abstract double acceptCash(double price, int num);
}
